--- a/reviewboard/static/rb/css/reviews.less
+++ b/reviewboard/static/rb/css/reviews.less
@@ -526,7 +526,7 @@
     margin: 20px 0 0 0;
     padding: 0;
 
-    li {
+    &>li {
       display: inline;
 
       &.draft {
@@ -1236,7 +1236,7 @@
     vertical-align: top;
   }
 
-  p {
+  &>p {
     margin: 1em 0 0 0;
   }
 }
